# cpp-sandbox

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
app/: main.cpp
benchmarks/: benchmarks.cpp
cmake/: Coverage.cmake  ExerciseHelpers.cmake  Options.cmake  Tooling.cmake
exercises/: CMakeLists.txt
exercises/01_low_level/: CMakeLists.txt  main.cpp  square.hpp
exercises/01_low_level/asm_to_object/: README.md  funcs.cpp  funcs.hpp  pic_test.cpp
exercises/01_low_level/compilation_to_asm/: README.md  main.cpp
exercises/01_low_level/linking/: README.md
exercises/01_low_level/preprocessing/: README.md  config.hpp  guard.hpp  macros.hpp  main.cpp
include/cpp_sandbox/: library.hpp
src/: CMakeLists.txt  library.cpp
tests/: test_library.cpp
